# nicar20-advanced-census-python

./: README.md  environment.yml  pyproject.toml  requirements.txt  workshop.ipynb
data/: Boundaries - Census Tracts - 2010.geojson  chi_median_age.geojson  explorer_available.csv  pop_by_tract.csv
