[tool.poetry]
name = "nicar-2020-advanced-census"
version = "0.1.0"
description = ""
authors = ["Joe Germuska <JoeGermuska@Northwestern.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^1.2.6"
cenpy = "^1.0.0"
census = "^0.8.13"
census_area = "^0.3.2"
matplotlib = "^3.1.2"
python-Levenshtein = "^0.12.0"
descartes = "^1.1.0"
censusgeocode = "^0.4.3"
census-data-aggregator = "^0.0.6"
census-error-analyzer = "^0.0.3"
latimes-statestyle = "^0.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
