[tool.poetry]
name = "nicar-2020-advanced-census"
version = "0.1.0"
description = ""
authors = ["Joe Germuska <JoeGermuska@Northwestern.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<4"
jupyterlab = "^3.5.0"
cenpy = "^1.0.1"
census = "^0.8.19"
census_area = "^0.4.3"
matplotlib = "^3.6.2"
python-Levenshtein = "^0.20.8"
descartes = "^1.1.0"
censusgeocode = "^0.5.2"
census-data-aggregator = "^0.0.7"
census-error-analyzer = "^0.0.4"
latimes-statestyle = "^0.1.6"
bleach = ">=3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
